// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PossiblePasswords with invalid or very weak possiblePasswords 1`] = `
<dl
  className="dl-horizontal"
>
  <dt>
    Possible Passwords
  </dt>
  <dd>
    1
  </dd>
  <dt>
    Entropy
  </dt>
  <dd>
    <ProgressBar
      active={false}
      bsClass="progress-bar"
      bsStyle="danger"
      isChild={false}
      label="0.00 bits (Very Weak)"
      max={128}
      min={0}
      now={0}
      srOnly={false}
      striped={false}
    />
  </dd>
</dl>
`;

exports[`PossiblePasswords with invalid possibleItems 1`] = `
<dl
  className="dl-horizontal"
>
  <dt>
    Possible Passwords
  </dt>
  <dd>
    1
  </dd>
  <dt>
    Entropy
  </dt>
  <dd>
    <ProgressBar
      active={false}
      bsClass="progress-bar"
      bsStyle="danger"
      isChild={false}
      label="0.00 bits (Very Weak)"
      max={128}
      min={0}
      now={0}
      srOnly={false}
      striped={false}
    />
  </dd>
</dl>
`;

exports[`PossiblePasswords with strong possiblePasswords 1`] = `
<dl
  className="dl-horizontal"
>
  <dt>
    Possible Passwords
  </dt>
  <dd>
    ~ 
    18,446,744,073,709,600,000
  </dd>
  <dt>
    Entropy
  </dt>
  <dd>
    <ProgressBar
      active={false}
      bsClass="progress-bar"
      bsStyle="info"
      isChild={false}
      label="64.00 bits (Strong)"
      max={128}
      min={0}
      now={64}
      srOnly={false}
      striped={false}
    />
  </dd>
</dl>
`;

exports[`PossiblePasswords with very strong possiblePasswords 1`] = `
<dl
  className="dl-horizontal"
>
  <dt>
    Possible Passwords
  </dt>
  <dd>
    ~ 
    340,282,366,920,938,000,000,000,000,000,000,000,000
  </dd>
  <dt>
    Entropy
  </dt>
  <dd>
    <ProgressBar
      active={false}
      bsClass="progress-bar"
      bsStyle="success"
      isChild={false}
      label="128.00 bits (Very Strong)"
      max={128}
      min={0}
      now={128}
      srOnly={false}
      striped={false}
    />
  </dd>
</dl>
`;

exports[`PossiblePasswords with weak possiblePasswords 1`] = `
<dl
  className="dl-horizontal"
>
  <dt>
    Possible Passwords
  </dt>
  <dd>
    4,294,967,296
  </dd>
  <dt>
    Entropy
  </dt>
  <dd>
    <ProgressBar
      active={false}
      bsClass="progress-bar"
      bsStyle="warning"
      isChild={false}
      label="32.00 bits (Weak)"
      max={128}
      min={0}
      now={32}
      srOnly={false}
      striped={false}
    />
  </dd>
</dl>
`;
